[package]
name = "AoC_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[dependencies]
num-traits = "0.2"
load_file = "1.0.1"
itertools = "0.12.0"
lazy_static = "1.4.0"
regex = "1.7.0"
time = "0.3.30"
nom = { version = "7.1.3", features = [] }
rayon = { version = "1.8", features = [] }
num = "0.4.1"
